# extractImu

./: CMakeLists.txt  README.md  main.cpp
